A lot of CSS :)

--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -43,7 +43,7 @@
               <input type="text" class="form-control" placeholder="Social Media URL" name="social_media">
             </div>
         </div><br>
-        <input type="submit" class="btn btn-primary" value="Update">
+        <input type="submit" class="btn btn-success" value="Update">
 
     </form>
 </div>
