--- a/templates/nearby_search_results.html
+++ b/templates/nearby_search_results.html
@@ -27,7 +27,7 @@
           </ul>
           <br>
           <form action="/join-ride" method="POST">
-            <input type="submit" class="btn btn-primary" value="Join ride">
+            <input type="submit" class="btn btn-success" value="Join ride">
             <input type="hidden" value={{ trip.trip_id }} name="trip">
         </form>
         </div>
