--- a/templates/add_ride.html
+++ b/templates/add_ride.html
@@ -45,7 +45,7 @@
               <input type="radio" name="newleg" value="True">Yes 
               <input type="radio" name="newleg" value="False">No<br>
               <br>
-            <input type="submit" class="btn btn-primary">
+            <input type="submit" class="btn btn-success">
           </form>
 
           </p>
