--- a/templates/base.html
+++ b/templates/base.html
@@ -2,15 +2,18 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Lato" rel="stylesheet">
+    <link rel="stylesheet" href="/static/stylesheet.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     {% block head %}
     {% endblock %}
 </head>
 <body>
 
-  <div class="container">
+  <div class="container-fluid">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">CarePool</a>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand">CarePool</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -29,7 +32,7 @@
     </ul>
     <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-            <img src={{ user_info.user_profile_img }} class="rounded-circle">
+            <img src={{ user_info.user_profile_img }} class="rounded-circle navbar-left">
         </li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -44,15 +47,22 @@
     </div>
     </nav>
 
-    <!-- Show flashed messages -->
     {% with messages = get_flashed_messages() %}
-        {% for message in messages %}
-            <br>
-            <div>{{ message }}</div>
-        {% endfor %}
+    <div class="row">
+      <div class="col">
+      {% for message in messages %}
+        <div class="alert alert-success" role="alert">
+          {{ message }}
+      </div>
+    </div>
+      {% endfor %}
+    </div>
     {% endwith %}
 
-    <div class="container-fluid">
+  </div>
+    <!-- Show flashed messages -->
+
+    <div class="container">
       {% block content %} put your content here {% endblock %}
     </div>
 
@@ -62,5 +72,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/js/bootstrap-datepicker.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.min.css" rel="stylesheet"/>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 </body>
 </html>
