--- a/templates/search_form.html
+++ b/templates/search_form.html
@@ -33,7 +33,7 @@
                 <input id="origin" class="query" type="text" name="origin" placeholder="Enter starting city" required> 
                 <input id="destination" class="query" type="text" name="destination" placeholder="Enter destination" required>
                 <input class="datepicker date" id="date" type="text" name="date" placeholder="Date" required>
-                <input type="submit" class="btn btn-primary">
+                <input type="submit" class="btn btn-success">
               </form>
             </div>
           </p>
