--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <br>
-  <h3>Available rides from {{ origin }} to {{ destination }} on {{ date_desired }} :</h3><br>
+  <h3>Available rides from {{ origin }} to {{ destination }} by {{ date_desired }} :</h3><br>
 
     <div class="row">
     {% for trip in trips %}
