Updated chart placement

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -35,12 +35,12 @@
                 <div class="col">
                     <canvas id="carbonFootprintOverTimeChart"></canvas>
                 </div>
+                <div class="col">
+                    <canvas id="carbonFootprintChart"></canvas> 
+                </div>
             </div>
             <br>
             <div class="row">
-                <div class="col-9">
-                    <canvas id="carbonFootprintChart"></canvas> 
-                </div>
                 <div class="col-3">
                 <div class="card">
                   <div class="card-body">
