--- a/templates/add_ride.html
+++ b/templates/add_ride.html
@@ -38,9 +38,9 @@
               <input class="timepicker" type="text" name="time" required>
        
               From 
-              <input type="text" name="origin" class="query">
+              <input type="text" name="origin" class="query" placeholder="Enter starting location">
             to
-              <input type="text" name="destination" class="query">
+              <input type="text" name="destination" class="query" placeholder="Enter destination">
            
 
             <hr class="my-4">
