--- a/templates/search_form.html
+++ b/templates/search_form.html
@@ -30,7 +30,7 @@
           <p class="lead">
             <div id="locationField">
               <form action="/search-rides" method=POST>
-                <input id="origin" class="query" type="text" name="origin" placeholder="Enter starting city" required> 
+                <input id="origin" class="query" type="text" name="origin" placeholder="Enter starting location" required> 
                 <input id="destination" class="query" type="text" name="destination" placeholder="Enter destination" required>
                 <input class="datepicker date" id="date" type="text" name="date" placeholder="Date" required>
                 <input type="submit" class="btn btn-success">
