--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
 
+{% block title %}Edit Profile{% endblock %}
+
 {% block content %}
 
 <br><br>
-<h2>Update personal information</h2>
+<h3>Update personal information</h3>
+
 <div>
     <form action="/edit-profile" method="post">
         <div class="form-row">
