--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>CarePool</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-
+    
     <style>
 
         body  {
-/*            background-image: url("static/img/palms.jpg");*/
-            background-position: center;
-            background-size: cover;
-            background-color: #cccccc;
+            background-image: url("https://i.imgur.com/KdmA0PI.jpg");
+            background-position: left center;
+            background-attachment: fixed;
+            background-repeat: no-repeat;
         }
 
+        .transparent, #transparent {
+            background-color:rgba(192 ,192 ,192 , 0.4)
+        }
     </style>
 
 </head>
@@ -21,7 +23,7 @@
 
 <div class="container">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light" id="transparent">
       <a class="navbar-brand" href="#">CarePool</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -29,11 +31,11 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#">Search Rides</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0" action="/login" method="post">
@@ -54,15 +56,15 @@
 
     <div class="row">
         <div class="col-8">
-            <div class="jumbotron">
-              <h1 class="display-4">Hello, world!</h1>
-              <p class="lead">Go somewhere new or visit loved ones with Raite.</p>
+            <div class="jumbotron transparent">
+              <h1 class="display-4">Ride. Care. Together. </h1>
+              <p class="lead">Visit loved ones or discover new places with CarePool.</p>
               <hr class="my-4">
               <p>Ridesharing from city to city in the U.S.</p>
             </div>               
         </div>
 
-        <div class="col-4">
+        <div class="col-4 transparent">
             <br>
                 <h2>Register</h2>
               <form action="/register" method="post">
@@ -75,11 +77,7 @@
                 <label for="exampleInputPassword1">Password</label>
                 <input type="password" class="form-control" name="password" placeholder="Password">
               </div>
-              <div class="form-group form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-              </div>
-              <input type="submit" class="btn btn-primary" value="Submit">
+              <input type="submit" class="btn btn-outline-primary" value="Submit">
             </form>
         </div>
     </div>
