--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Search Results{% endblock %}
+
 {% block content %}
   <br>
   <h3>We found these rides from {{ origin }} to {{ destination }} by {{ date_desired }} :</h3><br>
