--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         }
 
         .transparent, #transparent {
-            background-color:rgba(192 ,192 ,192 , 0.4)
+            background-color: rgba(192 ,192 ,192 , 0.4);
         }
     </style>
 
